--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@ Ethics Sway Passion
 
 (click:?page)[(link-undo:&quot;Continue&quot;)]</tw-passagedata><tw-passagedata pid="14" name="encounter 1 ethics" tags="" position="1773,657.5" size="100,100">(click:?page)[Why can&#39;t you just let me be who i am]
 
-(click:?page)[She trembled before the power of my ethics]
+(click:?page)[She trembled before the power of my ethics and dissappears]
 
-(click:?page)[She tries to convince me to be more like her]
-
-(click:?page)[I lose some Composure]
+(click:?page)[&#39;&#39;You have defeated the demon&#39;&#39;]
 
 (click-goto:?page,&quot;post encounter 1&quot;)</tw-passagedata><tw-passagedata pid="15" name="post encounter 1" tags="" position="1899,660.5" size="100,100">You: Are you asleep?
 (click:?page)[Sister: I was…where were you today i needed your help]
@@ -167,11 +165,9 @@ Ethics Sway Passion
 
 (click:?page)[(link-undo:&quot;Continue&quot;)]  </tw-passagedata><tw-passagedata pid="27" name="encounter 2 ethics" tags="" position="2454,665.5" size="100,100">(click:?page)[There’s nothing wrong with me just because i&#39;m different mom]
 
-(click:?page)[She scoffed at my ethics. She taunts me as i lose my belief in my ethics]
+(click:?page)[She dissappears]
 
-(click:?page)[She tries to convince me to be like everyone else!]
-
-(click:?page)[I lost some composure]
+(click:?page)[&#39;&#39;You have defeated the demon&#39;&#39;]
 
 (click:?page)[(click-goto:?page,&quot;post encounter 2&quot;)]  </tw-passagedata><tw-passagedata pid="28" name="encounter 2 breathe" tags="" position="2389,839.5" size="100,100">(click:?page)[I take a deep breathe and regain some composure]
 
@@ -216,9 +212,7 @@ Ethics Sway Passion
 
 (click:?page)[They were swayed by my ethics.]
 
-(click:?page)[they scold me for loving their child]
-
-(click:?page)[I lose some Composure]
+(click:?page)[&#39;&#39;You have defeated the demon&#39;&#39;]
 
 (click:?page)[(click-goto:?page,&quot;post encounter 3&quot;)]</tw-passagedata><tw-passagedata pid="34" name="encounter 3 breathe" tags="" position="3091,849.5" size="100,100">(click:?page)[I take a deep breathe and regain some composure]
 
@@ -261,11 +255,9 @@ Ethics Sway Passion
 
 (click:?page)[(link-undo:&quot;Continue&quot;)]</tw-passagedata><tw-passagedata pid="38" name="encounter 4 ethics" tags="" position="3929,661.5" size="100,100">(click:?page)[“You didn’t just give up on me. You gave up on yourself?”]
 
-(click:?page)[My passion stung my sweetheart]
+(click:?page)[My ethics stung my sweetheart]
 
-(click:?page)[My sweetheart reminds me of all the good times we shared]
-
-(click:?page)[I lose some Composure]
+(click:?page)[&#39;&#39;You have defeated the demon&#39;&#39;]
 
 (click:?page)[(click-goto:?page,&quot;post encounter 4&quot;)]</tw-passagedata><tw-passagedata pid="39" name="encounter 4 breathe" tags="" position="3959,870.5" size="100,100">(click:?page)[I take a deep breathe and regain some composure]
 
@@ -314,11 +306,9 @@ Ethics Sway Passion
 
 (click:?page)[(link-undo:&quot;Continue&quot;)]</tw-passagedata><tw-passagedata pid="44" name="encounter 5 ethics" tags="" position="4601,660.5" size="100,100">(click:?page)[“I won&#39;t torment myself anymore, I will move on”]
 
-(click:?page)[The apparition trembled before my ethics.]
+(click:?page)[The apparition trembled before my ethics and fades away]
 
-(click:?page)[The apparition agonizes me with nagging doubt]
-
-(click:?page)[I lose some Composure]
+(click:?page)[&#39;&#39;You have defeated this demon&#39;&#39;]
 
 (click:?page)[(click-goto:?page,&quot;ending&quot;)]</tw-passagedata><tw-passagedata pid="45" name="encounter 5 breathe" tags="" position="4613,873.5" size="100,100">(click:?page)[I take a deep breathe and regain some composure]
 
